--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ textarea {
     text-align: center;
     justify-content: center;
     background-color: #273549;
+    margin-right: 20px;
   }
   
 
